--- a/caldb/Makefile.am
+++ b/caldb/Makefile.am
@@ -1,22 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 # Calibration files to distribute
-irfs = kb_A_50h_v3.dat \
-       kb_B_50h_v3.dat \
-       kb_C_50h_v3.dat \
-       kb_D_50h_v3.dat \
-       kb_E_50h_v3.dat \
-       kb_F_50h_v3.dat \
-       kb_G_50h_v3.dat \
-       kb_H_50h_v3.dat \
-       kb_I_50h_v3.dat \
-       kb_J_50h_v3.dat \
-       kb_K_50h_v3.dat \
-       kb_NA_50h_v3.dat \
-       kb_NB_50h_v3.dat \
-       IFAE_B_50h.dat \
-       IFAE_C_50h.dat \
-       IFAE_E_50h.dat
+irfs = cta_dummy_irf.dat
 
 caldbdir = $(datadir)/caldb/cta
 caldb_DATA = $(irfs)
