--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -2,7 +2,7 @@
 # ==========================================================================
 # This script tests all cscripts that are shipped with ctools
 #
-# Copyright (C) 2011-2012 Juergen Knoedlseder
+# Copyright (C) 2011-2013 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -56,7 +56,7 @@ chmod +x @abs_top_srcdir@/scripts/cspull.py
   outfile="pull.dat" \
   ntrials="3" \
   caldb="irf" \
-  irf="kb_E_50h_v3" \
+  irf="cta_dummy_irf" \
   ra=83.6331 \
   dec=22.0145 \
   emin=0.1 \
@@ -86,10 +86,10 @@ $ECHO " ok"
 #@abs_top_srcdir@/scripts/cssens.py \
 #  duration=3600.0 \
 #  caldb="irf" \
-#  irf="kb_E_50h_v3" \
+#  irf="cta_dummy_irf" \
 #  type="point" \
 #  offset="0.0" \
-#  bkg="data/bkg_kb_E_50h_v3.txt" \
+#  bkg="data/bkg_dummy.txt" \
 #  rad=5.0 > cssens.log
 #echo -n "."
 #if [ -s "sensitivity.dat" ]
@@ -111,10 +111,10 @@ chmod +x @abs_top_srcdir@/scripts/cstsdist.py
   outfile="ts.dat" \
   ntrials="1" \
   caldb="irf" \
-  irf="kb_E_50h_v3" \
+  irf="cta_dummy_irf" \
   type="point" \
   offset="0.0" \
-  bkg="data/bkg_kb_E_50h_v3.txt" \
+  bkg="data/bkg_dummy.txt" \
   emin=0.1 \
   emax=100.0 \
   enumbins=0 \
