Unit test do no longer delete log files.
Deleting log files led to a problem with the new automake test suite.

--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -36,7 +36,7 @@ $ECHO "*****************"
 #
 # Remove any existing result files
 # ================================
-rm -rf *.fits *.log *.xml *.dat
+rm -rf *.fits *.xml *.dat
 
 
 #
