--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ doc/html/.buildinfo
 doc/html/.doctrees/
 doc/html/_sources/
 doc/html/_static/
+doc/html/_images/
 doc/html/contents.html
 doc/html/develop.html
 doc/html/genindex.html
