Create download page in template and remove static download.html page from html directory.

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ doc/html/_static/
 doc/html/_images/
 doc/html/contents.html
 doc/html/develop.html
+doc/html/download.html
 doc/html/genindex.html
 doc/html/objects.inv
 doc/html/search.html
