Test script runs in bash shell to guarantee correct output redirection on all systems.

--- a/testconf.sh.in
+++ b/testconf.sh.in
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 # =====================================================================
 # Test ctools configuration script (used for continuous integration;
 # assumes that ctools have been installed)
