CTA dummy reponse now installs in share/caldb/data/cta/dummy/.
The default CALDB data structure is data/<mission>[/<instrument>]. This structure is now respected.

--- a/caldb/Makefile.am
+++ b/caldb/Makefile.am
@@ -3,7 +3,7 @@
 # Calibration files to distribute
 irfs = cta_dummy_irf.dat
 
-caldbdir = $(datadir)/caldb/cta
+caldbdir = $(datadir)/caldb/data/cta/dummy
 caldb_DATA = $(irfs)
 
 # Extra files to be distributed in the tar file
