--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -4,10 +4,13 @@
 binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py
 
 # Scripts to be distributed in pythondir
-pythonscripts = cspull.py cssens.py cstsdist.py obsutils.py
+pythonscripts = cspull.py cssens.py cstsdist.py \
+                obsutils.py \
+                lsmodel.py
 
 # Scripts for which symbolic links will be created in bindir
-linkscripts = cspull cssens cstsdist
+linkscripts = cspull cssens cstsdist \
+              lsmodel
 
 # Distribute scripts
 EXTRA_DIST         = $(binscripts) $(pythonscripts)
