--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ depcomp
 test-driver
 testconf.sh
 
-doc/html/doxygen
+doc/html
 doc/man
 src/ctools-setup
 pyext/build/
@@ -61,20 +61,3 @@ test/test_cscripts.sh
 examples/*.fits
 examples/*.xml
 examples/*.dat
-
-# Sphinx stuff
-doc/html/.buildinfo
-doc/html/.doctrees/
-doc/html/_sources/
-doc/html/_static/
-doc/html/_images/
-doc/html/contents.html
-doc/html/develop.html
-doc/html/download.html
-doc/html/genindex.html
-doc/html/objects.inv
-doc/html/search.html
-doc/html/searchindex.js
-doc/html/test.html
-doc/html/index.html
-doc/html/user_manual/
