Import obsutilis in ctools

--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -121,7 +121,7 @@ setup(name='@PACKAGE_NAME@',
       author='Juergen Knoedlseder',
       author_email='@PACKAGE_BUGREPORT@',
       url='http://gammalib.sourceforge.net/',
-      py_modules=['ctools.ctools'],
+      py_modules=['ctools.ctools', 'ctools.obsutils'],
       ext_modules=[Extension('ctools._ctools', ['ctools/ctools_wrap.cpp'],
                              include_dirs=include_dirs,
                              library_dirs=library_dirs,
