--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -5,7 +5,8 @@ binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py
 
 # Scripts to be distributed in pythondir
 pythonscripts = cspull.py cssens.py cstsdist.py cscaldb.py \
-                lsmodel.py
+                lsmodel.py \
+				obsutils.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb \
