Remove html/images directory from installation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -267,7 +267,7 @@ endif #DX_COND_doc
 #
 
 # Install HTML files
-HTMLDIRS = html html/images
+HTMLDIRS = html
 HTML_INSTALL_DATA_TARGETS = install-data-html
 install-data-html:
 	$(mkinstalldirs) $(DESTDIR)$(docdir)
