--- a/ctools.pc.in
+++ b/ctools.pc.in
@@ -11,5 +11,5 @@ Requires:
 Requires.private: GammaLib >= 0.8.1
 Conflicts: 
 Cflags: -I${includedir}/ctools
-Libs: -L${libdir} -lctools
+Libs: -L${libdir} -lctools @OPENMP_CXXFLAGS@
 Libs.private: 
