ctcubemask. add ctbin

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,8 @@ SUBDIRS = ctbin \
           ctobssim \
           ctselect \
           ctskymap \
-          ctexpcube
+          ctexpcube \
+	  ctcubemask
 
 # Scripts to be distributed
 scripts = ctools-setup \
@@ -29,7 +30,8 @@ libctools_la_LIBADD = ctbin/libctbin.la \
                       ctobssim/libctobssim.la \
                       ctselect/libctselect.la \
                       ctskymap/libctskymap.la \
-                      ctexpcube/libctexpcube.la
+                      ctexpcube/libctexpcube.la \
+		      ctcubemask/libctcubemask.la
 
 # Distribute scripts
 EXTRA_DIST   = $(scripts)
