--- a/configure.ac
+++ b/configure.ac
@@ -883,6 +883,7 @@ AC_CONFIG_FILES([Makefile
                  src/ctskymap/Makefile
                  src/ctselect/Makefile
                  src/ctexpcube/Makefile
+                 src/ctpsfcube/Makefile
                  src/ctcubemask/Makefile
                  src/ctools-setup
                  test/Makefile
