Integrate ctpsfcube tool.
* Checked the code for coding conventions.
* Renamed the angular seperation user parameters to amax and anumbins. "a" stands for angular separation, "d" for delta is less explicit.
* Add ctpsfcube executable unit test

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ src/ctobssim/ctobssim
 src/ctselect/ctselect
 src/ctskymap/ctskymap
 src/ctexpcube/ctexpcube
+src/ctpsfcube/ctpsfcube
 src/ctcubemask/ctcubemask
 test/pfiles/
 test/*.fits
