Add support folder and ctool base class

--- a/configure.ac
+++ b/configure.ac
@@ -886,7 +886,8 @@ AC_CONFIG_FILES([Makefile
                  src/ctpsfcube/Makefile
                  src/ctbkgcube/Makefile
                  src/ctcubemask/Makefile
-		 src/cttsmap/Makefile
+                 src/cttsmap/Makefile
+                 src/support/Makefile
                  src/ctools-setup
                  test/Makefile
                  test/test_cscripts.sh
