--- a/src/ctbin/Makefile.am
+++ b/src/ctbin/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctbin
 
@@ -14,7 +17,7 @@ libctbin_la_SOURCES = $(sources)
 ctbin_SOURCES = main.cpp
 ctbin_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctbin_CPPFLAGS = @CPPFLAGS@
-ctbin_LDADD = libctbin.la
+ctbin_LDADD = libctbin.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
