ctbkgcube now derives from ctool class, removed get_ebounds() method as it is provided by the base class

--- a/src/ctbkgcube/Makefile.am
+++ b/src/ctbkgcube/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctbkgcube
 
@@ -14,7 +17,7 @@ libctbkgcube_la_SOURCES = $(sources)
 ctbkgcube_SOURCES = main.cpp
 ctbkgcube_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctbkgcube_CPPFLAGS = @CPPFLAGS@
-ctbkgcube_LDADD = libctbkgcube.la
+ctbkgcube_LDADD = libctbkgcube.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
