ctexpcube now derives from ctool. Added set_obs_response() to the ctool base class for CTA observation response setting.

--- a/src/ctexpcube/Makefile.am
+++ b/src/ctexpcube/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctexpcube
 
@@ -14,7 +17,7 @@ libctexpcube_la_SOURCES = $(sources)
 ctexpcube_SOURCES = main.cpp
 ctexpcube_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctexpcube_CPPFLAGS = @CPPFLAGS@
-ctexpcube_LDADD = libctexpcube.la
+ctexpcube_LDADD = libctexpcube.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
