--- a/src/ctlike/Makefile.am
+++ b/src/ctlike/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctlike
 
@@ -14,7 +17,7 @@ libctlike_la_SOURCES = $(sources)
 ctlike_SOURCES = main.cpp
 ctlike_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctlike_CPPFLAGS = @CPPFLAGS@
-ctlike_LDADD = libctlike.la
+ctlike_LDADD = libctlike.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
