--- a/src/ctmodel/Makefile.am
+++ b/src/ctmodel/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctmodel
 
@@ -14,7 +17,7 @@ libctmodel_la_SOURCES = $(sources)
 ctmodel_SOURCES = main.cpp
 ctmodel_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctmodel_CPPFLAGS = @CPPFLAGS@
-ctmodel_LDADD = libctmodel.la
+ctmodel_LDADD = libctmodel.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
