ctobssim now derives from ctool base class.

--- a/src/ctobssim/Makefile.am
+++ b/src/ctobssim/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctobssim
 
@@ -15,7 +18,7 @@ libctobssim_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 ctobssim_SOURCES = main.cpp
 ctobssim_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctobssim_CPPFLAGS = @CPPFLAGS@
-ctobssim_LDADD = libctobssim.la
+ctobssim_LDADD = libctobssim.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
