--- a/src/ctpsfcube/Makefile.am
+++ b/src/ctpsfcube/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = ctpsfcube
 
@@ -14,7 +17,7 @@ libctpsfcube_la_SOURCES = $(sources)
 ctpsfcube_SOURCES = main.cpp
 ctpsfcube_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctpsfcube_CPPFLAGS = @CPPFLAGS@
-ctpsfcube_LDADD = libctpsfcube.la
+ctpsfcube_LDADD = libctpsfcube.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
