--- a/src/cttsmap/Makefile.am
+++ b/src/cttsmap/Makefile.am
@@ -1,5 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
+# Set include directories
+INCLUDES = -I$(top_srcdir)/src/support
+
 # Program name
 bin_PROGRAMS = cttsmap
 
@@ -14,7 +17,7 @@ libcttsmap_la_SOURCES = $(sources)
 cttsmap_SOURCES = main.cpp
 cttsmap_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 cttsmap_CPPFLAGS = @CPPFLAGS@
-cttsmap_LDADD = libcttsmap.la
+cttsmap_LDADD = libcttsmap.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
