--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -131,3 +131,32 @@ else
   exit 1
 fi
 $ECHO " ok"
+
+#
+# Test csresmap
+# =============
+$ECHO @ECHO_N@ "Test csresmap: "
+chmod +x @abs_top_srcdir@/scripts/csresmap.py
+@abs_top_srcdir@/scripts/csresmap.py \
+  infile="data/crab_events.fits" \
+  outfile="residualmap.fits" \
+  srcmdl="data/crab.xml" \
+  caldb="irf" \
+  irf="cta_dummy_irf" \
+  nxpix=50 \
+  nypix=50 \
+  binsz=0.02 \
+  coordsys="CEL" \
+  xref=83.63 \
+  yref=22.01 \
+  proj="CAR" \
+  binsz=0.05 > csresmap.log
+$ECHO @ECHO_N@ "."
+if [ -s "residualmap.fits" ]
+then
+  $ECHO @ECHO_N@ "."
+else
+  $ECHO " residualmap.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
