--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -139,7 +139,7 @@ $ECHO @ECHO_N@ "Test csresmap: "
 chmod +x @abs_top_srcdir@/scripts/csresmap.py
 @abs_top_srcdir@/scripts/csresmap.py \
   infile="data/crab_events.fits" \
-  outfile="residualmap.fits" \
+  outfile="resmap.fits" \
   srcmdl="data/crab.xml" \
   caldb="irf" \
   irf="cta_dummy_irf" \
@@ -152,11 +152,11 @@ chmod +x @abs_top_srcdir@/scripts/csresmap.py
   proj="CAR" \
   binsz=0.05 > csresmap.log
 $ECHO @ECHO_N@ "."
-if [ -s "residualmap.fits" ]
+if [ -s "resmap.fits" ]
 then
   $ECHO @ECHO_N@ "."
 else
-  $ECHO " residualmap.fits file is not valid"
+  $ECHO " resmap.fits file is not valid"
   exit 1
 fi
 $ECHO " ok"
