added first version of ctbutterfly including a unit test

--- a/configure.ac
+++ b/configure.ac
@@ -887,6 +887,7 @@ AC_CONFIG_FILES([Makefile
                  src/ctbkgcube/Makefile
                  src/ctcubemask/Makefile
                  src/cttsmap/Makefile
+                 src/ctbutterfly/Makefile
                  src/support/Makefile
                  src/ctools-setup
                  test/Makefile
